<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/movie_thumbnail_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_thumbnail"
            android:scaleType="fitXY"
            tools:srcCompat="@drawable/incredibles" />
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/rating_count_bg_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rating_shape"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/rating_shape" />

    <TextView
        android:id="@+id/rate_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_count"
        android:textColor="@color/textColorPrimary"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/rating_count_bg_iv"
        app:layout_constraintEnd_toEndOf="@+id/rating_count_bg_iv"
        app:layout_constraintStart_toStartOf="@+id/rating_count_bg_iv"
        app:layout_constraintTop_toTopOf="@+id/rating_count_bg_iv"
        tools:text="@string/rating_count" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="4dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />

</android.support.constraint.ConstraintLayout>