<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MoviesDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/child_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/header_container"
                android:layout_width="0dp"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movie_header_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_header"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/incredibles_original" />

                <FrameLayout
                    android:id="@+id/header_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/overlay">

                </FrameLayout>

            </FrameLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/oval_background"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
                app:srcCompat="@drawable/oval_shape" />

            <ImageView
                android:id="@+id/press_play_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/press_play"
                app:layout_constraintBottom_toTopOf="@+id/movie_title_tv"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/header_container"
                app:srcCompat="@drawable/ic_press_play" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/header_container"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/header_container"
                app:srcCompat="@drawable/ic_favorite_border" />

            <TextView
                android:id="@+id/rating_count_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="8.0" />

            <TextView
                android:id="@+id/overview_header_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/textColorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteY="268dp"
                tools:text="@string/movie_overview" />

            <TextView
                android:id="@+id/review_header_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/review_header"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/trailer_recycler_view" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/movie_overview_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="16sp"
                android:typeface="serif"
                app:trimExpandedText="Read More"
                app:trimCollapsedText="Read Less"
                app:trimLines="6"
                app:colorClickableText="@android:color/holo_blue_dark"
                app:trimMode="trimModeLine"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/overview_header_tv"
                tools:text="Elastigirl springs into action to save the day, while Mr, Incredible faces his greatest challenge yet taking care of the problems of his three children" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="144dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/header_container"
                tools:text="Incredibles 2" />

            <TextView
                android:id="@+id/certification_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
                tools:text="PG" />

            <ImageView
                android:id="@+id/release_date_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/release_date"
                app:layout_constraintStart_toEndOf="@+id/certification_tv"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
                tools:srcCompat="@drawable/ic_date" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/release_date_iv"
                app:layout_constraintStart_toEndOf="@+id/release_date_iv"
                app:layout_constraintTop_toTopOf="@+id/release_date_iv"
                tools:text="2018" />

            <ImageView
                android:id="@+id/movie_runtime_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/movie_timer"
                app:layout_constraintStart_toEndOf="@+id/release_date_tv"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
                tools:srcCompat="@drawable/ic_timer" />

            <TextView
                android:id="@+id/movie_runtime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/movie_runtime_iv"
                app:layout_constraintStart_toEndOf="@+id/movie_runtime_iv"
                app:layout_constraintTop_toTopOf="@+id/movie_runtime_iv"
                app:layout_constraintVertical_bias="0.0"
                tools:text="1h 58min" />

            <TextView
                android:id="@+id/genres_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/movie_runtime_iv"
                tools:text="Animation, Action, Adventure" />

            <TextView
                android:id="@+id/trailer_header_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Trailers"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview_tv" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_header_tv" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_header_tv"
                tools:listitem="@layout/movie_review_list_item" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>